--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <div class="section">
-    <h2>士氣恢復計算</h2>
+    <h2>三戰士氣恢復計算</h2>
     <label>最大士氣：<input type="number" id="maxMorale" value="100"></label>
     <label>現在士氣：<input type="number" id="currentMorale"></label>
     <label>每恢復1士氣所需時間（分鐘）：<input type="number" id="moraleRate" value="2"></label>
